--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,13 @@
 h1 {
 color: blue;
 text-align:center;
+border-bottom: 1px solid gray;
 }
 h2 {
 color: red;
 text-align: center;
+border-bottom: 1px solid black
+font-style: italic;
 }
 p {font-family: sans-serif;
 font-size: 18px;
