--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ border-bottom: 1px solid gray;
 h2 {
 color: red;
 text-align: center;
-border-bottom: 1px solid black
+border-bottom: 1px solid black;
 font-style: italic;
 }
 p {font-family: sans-serif;
