--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+
+  border: 5px solid black;
+}
 h1 {
 color: blue;
 text-align:center;
@@ -10,5 +14,8 @@ border-bottom: 1px solid black;
 font-style: italic;
 }
 p {font-family: sans-serif;
+font-size: 18px;
+}
+.drinks {
 font-size: 18px;
 }
