--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,20 +2,27 @@ body {
 
   border: 5px solid black;
 }
+
 h1 {
-color: blue;
-text-align:center;
-border-bottom: 1px solid gray;
+  color: blue;
+  text-align:center;
+  border-bottom: 1px solid gray;
 }
+
 h2 {
-color: red;
-text-align: center;
-border-bottom: 1px solid black;
-font-style: italic;
+  color: red;
+  text-align: left;
+  border-bottom: 1px solid black;
+f ont-style: italic;
 }
-p {font-family: sans-serif;
-font-size: 18px;
+
+p {
+  font-family: sans-serif;
+  font-size: 16px;
+  color: green;
 }
-.drinks {
-font-size: 18px;
+
+.drinks
+{
+  font-size: 18px;
 }
