--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,10 +26,18 @@ p {
 {
   font-size: 18px;
 }
+.Whiskers
+  {
+    font-size:18px;
 
+  }
 h3 {
   font-size: 18px;
   font-style: italic;
   color: blue;
+}
 
+.projects {
+
+  font-size:18px;
 }
